trunk/Archive2/5d/a9e86a669a40bd/output
main.cpp: In member function 'void Test::sety(int)':
main.cpp:7:5: error: static assertion failed: y is read-only.
     static_assert(!Readonly, #Name " is read-only."); \
     ^
main.cpp:17:5: note: in expansion of macro 'GET_SET'
     GET_SET(y, true)
     ^
